# CyanRenderEngine

./: .gitignore  CMakeLists.txt  CyanRenderEngine.sln  CyanRenderEngine.vcxproj  CyanRenderEngine.vcxproj.filters  README.md
App/: App.vcxproj  imgui.ini
Core/: Core.vcxproj  Core.vcxproj.filters
CpuRaytracer/: CpuRaytracer.cpp  CpuRaytracer.vcxproj  CpuRaytracer.vcxproj.filters
CyanApp/: CyanApp.vcxproj  CyanApp.vcxproj.filters
CyanBaker/: CyanBaker.vcxproj
CyanEditor/: CyanEditor.cpp  CyanEditor.vcxproj  CyanEditor.vcxproj.filters
CyanLib/: CyanLib.vcxproj  CyanLib.vcxproj.filters  PostProcess.cpp  PostProcess.h
Engine/: Engine.vcxproj  Engine.vcxproj.filters
EngineApp/: EngineApp.cpp  EngineApp.vcxproj  EngineApp.vcxproj.filters  imgui.ini
ExternalLib/: ExternalLib.vcxproj  ExternalLib.vcxproj.filters
GameFramework/: GameFramework.vcxproj  GameFramework.vcxproj.filters
Gfx/: Gfx.vcxproj  Gfx.vcxproj.filters
IrradianceCaching/: IrradianceCaching.vcxproj  IrradianceCaching.vcxproj.filters
Modular/: Modular.cpp  Modular.vcxproj  Modular.vcxproj.filters
RasterizedBVH/: RasterizedBVH.vcxproj
TexturePacking/: App.cpp  TexturePacking.vcxproj
cmake/: FindAssimp.cmake  FindGLEW.cmake  Findglfw3.cmake
include/: Allocator.h  Asset.h  BVH.h  BasicApp.h  Common.h  CyanAPI.h  CyanApp.h  CyanPathTracer.h  CyanUI.h  Entity.h  Envmap.h  Geometry.h  GfxContext.h  GraphicsSystem.h  Light.h  LightMap.h  LightProbe.h  Material.h  PbrApp.h  PbrSpheres.h  Plane.h  RenderPass.h  RenderTarget.h  SceneNode.h  Transform.h  Uniform.h  Utils.h  VertexArray.h  VertexBuffer.h  camera.h  cyanEngine.h  cyanRenderer.h  mathUtils.h  mesh.h  scene.h  shader.h  texture.h  window.h
materials/: M_DefaultOpaque_p.glsl  M_Test_p.glsl
scene/: demo_scene_00.json  sponza_scene.json
shader/: ReSTIRSSGI_denoise_p.glsl  ReSTIRSSGI_resolve_p.glsl  ReSTIRSSGI_spatial_p.glsl  ReSTIRSSGI_temporal_p.glsl  SSGI_indirect_lighting_p.glsl  blinnPhong.frag  blinnPhong.vert  blit_p.glsl  blit_v.glsl  bloomBlend.frag  bloomShader.frag  bloom_downsample_p.glsl  bloom_downsample_v.glsl  bloom_setup_p.glsl  bloom_setup_v.glsl  bloom_upscale_p.glsl  bloom_upscale_v.glsl  build_cubemap_v.glsl  build_hi_z_p.glsl  calculate_light.glsl  colored_quad_p.glsl  composite_p.glsl  composite_v.glsl  cone_vis_c.glsl  cone_vis_g.glsl  cone_vis_p.glsl  cone_vis_v.glsl  convolve_diffuse_p.glsl  convolve_diffuse_v.glsl  convolve_specular_p.glsl  convolve_specular_v.glsl  copy_depth_p.glsl  (+224 more)
src/: Asset.cpp  (+31 more)
(+541 files in other folders)
